--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TrainingModule",
-  "version": "0.1.2",
+  "name": "VisitModule",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -17,12 +17,13 @@
   "dependencies": {
     "@angular-devkit/build-angular": "~0.900.6",
     "@angular/animations": "~9.0.6",
-    "@angular/cdk": "^9.1.3",
+    "@angular/cdk": "^9.2.3",
     "@angular/cli": "~9.0.6",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/core": "~9.0.6",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.0.6",
     "@angular/http": "^7.2.16",
     "@angular/material": "^9.1.3",
@@ -30,12 +31,12 @@
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@angular/service-worker": "~9.0.6",
-    "@ngmodule/material-carousel": "^0.6.0",
-    "angular-in-memory-web-api": "^0.10.0",
-    "aws-sdk": "^2.651.0",
-    "file-saver": "^2.0.2",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "idb": "^5.0.2",
-    "ng2-pdf-viewer": "^6.2.0",
+    "moment": "^2.25.3",
+    "moment-range": "^4.0.2",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "typescript": "~3.7.5",
