--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "engines": {
     "node": "12.14.1",
@@ -33,10 +34,12 @@
     "@angular/service-worker": "~9.0.6",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "express": "^4.17.1",
     "idb": "^5.0.2",
     "moment": "^2.25.3",
     "moment-range": "^4.0.2",
     "ng2-charts": "^2.3.0",
+    "path": "^0.12.7",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "typescript": "~3.7.5",
