--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@angular-devkit/build-angular": "~0.900.6",
     "@angular/animations": "~9.0.6",
-    "@angular/cdk": "^9.2.3",
+    "@angular/cdk": "^9.2.4",
     "@angular/cli": "~9.0.6",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
@@ -27,15 +27,17 @@
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.0.6",
     "@angular/http": "^7.2.16",
-    "@angular/material": "^9.1.3",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@angular/service-worker": "~9.0.6",
+    "@auth0/angular-jwt": "^5.0.1",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
     "express": "^4.17.1",
     "idb": "^5.0.2",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.25.3",
     "moment-range": "^4.0.2",
     "ng2-charts": "^2.3.0",
